add components and fonts

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyCv</title>
+  <title>Oleksandr Dolbnia - Front-end Developer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta data-n-head="ssr" name="keywords" content="website creation, website logic, layout, visual layout identity, design, interface, landing page, mobile design, product design, responsive design, ui, ux, web design">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
